dREL-ply-0.5/parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> final_input
Rule 1     final_input -> input
Rule 2     input -> statement
Rule 3     input -> input statement
Rule 4     statement -> stmt_list
Rule 5     statement -> compound_stmt
Rule 6     stmt_list -> simple_stmt
Rule 7     stmt_list -> stmt_list ; simple_stmt
Rule 8     stmt_list -> stmt_list ; simple_stmt ;
Rule 9     simple_stmt -> assignment_stmt
Rule 10    simple_stmt -> augmented_assignment_stmt
Rule 11    simple_stmt -> fancy_drel_assignment_stmt
Rule 12    simple_stmt -> print_stmt
Rule 13    simple_stmt -> BREAK
Rule 14    simple_stmt -> NEXT
Rule 15    print_stmt -> PRINT expression
Rule 16    expression_list -> expression
Rule 17    expression_list -> expression_list , expression
Rule 18    expression -> or_test
Rule 19    target -> primary
Rule 20    target -> ( target_list )
Rule 21    target -> [ target_list ]
Rule 22    or_test -> and_test
Rule 23    or_test -> or_test OR and_test
Rule 24    and_test -> not_test
Rule 25    and_test -> and_test AND not_test
Rule 26    not_test -> comparison
Rule 27    not_test -> NOT not_test
Rule 28    comparison -> a_expr
Rule 29    comparison -> a_expr comp_operator a_expr
Rule 30    comp_operator -> <
Rule 31    comp_operator -> >
Rule 32    comp_operator -> GTE
Rule 33    comp_operator -> LTE
Rule 34    comp_operator -> NEQ
Rule 35    comp_operator -> ISEQUAL
Rule 36    comp_operator -> IN
Rule 37    comp_operator -> NOT IN
Rule 38    a_expr -> m_expr
Rule 39    a_expr -> a_expr + m_expr
Rule 40    a_expr -> a_expr - m_expr
Rule 41    m_expr -> u_expr
Rule 42    m_expr -> m_expr * u_expr
Rule 43    m_expr -> m_expr / u_expr
Rule 44    m_expr -> m_expr ^ u_expr
Rule 45    u_expr -> power
Rule 46    u_expr -> - u_expr
Rule 47    u_expr -> + u_expr
Rule 48    power -> primary
Rule 49    power -> primary POWER u_expr
Rule 50    primary -> atom
Rule 51    primary -> primary_att
Rule 52    primary -> subscription
Rule 53    primary -> slicing
Rule 54    primary -> call
Rule 55    primary_att -> attributeref
Rule 56    atom -> ID
Rule 57    atom -> item_tag
Rule 58    atom -> literal
Rule 59    atom -> enclosure
Rule 60    item_tag -> ITEM_TAG
Rule 61    literal -> stringliteral
Rule 62    literal -> INTEGER
Rule 63    literal -> HEXINT
Rule 64    literal -> OCTINT
Rule 65    literal -> BININT
Rule 66    literal -> REAL
Rule 67    literal -> IMAGINARY
Rule 68    stringliteral -> STRPREFIX SHORTSTRING
Rule 69    stringliteral -> STRPREFIX LONGSTRING
Rule 70    stringliteral -> SHORTSTRING
Rule 71    stringliteral -> LONGSTRING
Rule 72    enclosure -> parenth_form
Rule 73    enclosure -> string_conversion
Rule 74    enclosure -> list_display
Rule 75    parenth_form -> ( expression_list )
Rule 76    parenth_form -> ( )
Rule 77    string_conversion -> ` expression_list `
Rule 78    list_display -> [ listmaker ]
Rule 79    list_display -> [ ]
Rule 80    listmaker -> expression listmaker2
Rule 81    listmaker -> expression list_for
Rule 82    listmaker2 -> , expression
Rule 83    listmaker2 -> listmaker2 , expression
Rule 84    listmaker2 -> <empty>
Rule 85    list_for -> FOR expression_list IN testlist
Rule 86    list_for -> FOR expression_list IN testlist list_iter
Rule 87    testlist -> or_test
Rule 88    testlist -> testlist , or_test
Rule 89    testlist -> testlist , or_test ,
Rule 90    list_iter -> list_for
Rule 91    list_iter -> list_if
Rule 92    list_if -> IF or_test
Rule 93    list_if -> IF or_test list_iter
Rule 94    attributeref -> primary attribute_tag
Rule 95    attribute_tag -> . ID
Rule 96    attribute_tag -> REAL
Rule 97    subscription -> primary [ expression_list ]
Rule 98    slicing -> simple_slicing
Rule 99    slicing -> extended_slicing
Rule 100   simple_slicing -> primary [ short_slice ]
Rule 101   short_slice -> :
Rule 102   short_slice -> expression : expression
Rule 103   short_slice -> : expression
Rule 104   short_slice -> expression :
Rule 105   extended_slicing -> primary [ slice_list ]
Rule 106   slice_list -> slice_item
Rule 107   slice_list -> slice_list , slice_item
Rule 108   slice_item -> expression
Rule 109   slice_item -> proper_slice
Rule 110   slice_item -> ELLIPSIS
Rule 111   proper_slice -> short_slice
Rule 112   proper_slice -> long_slice
Rule 113   long_slice -> short_slice :
Rule 114   long_slice -> short_slice : expression
Rule 115   call -> primary ( )
Rule 116   call -> primary ( argument_list )
Rule 117   argument_list -> func_arg
Rule 118   argument_list -> argument_list , func_arg
Rule 119   func_arg -> expression
Rule 120   augmented_assignment_stmt -> target AUGOP expression_list
Rule 121   fancy_drel_assignment_stmt -> primary ( dotlist )
Rule 122   dotlist -> . ID = expression
Rule 123   dotlist -> dotlist , . ID = expression
Rule 124   assignment_stmt -> target_list = expression_list
Rule 125   target_list -> target
Rule 126   target_list -> target_list , target
Rule 127   compound_stmt -> if_stmt
Rule 128   compound_stmt -> for_stmt
Rule 129   compound_stmt -> do_stmt
Rule 130   compound_stmt -> loop_stmt
Rule 131   compound_stmt -> with_stmt
Rule 132   compound_stmt -> where_stmt
Rule 133   compound_stmt -> switch_stmt
Rule 134   compound_stmt -> funcdef
Rule 135   if_stmt -> IF expression suite
Rule 136   if_stmt -> if_stmt ELSE suite
Rule 137   suite -> simple_stmt
Rule 138   suite -> compound_stmt
Rule 139   suite -> open_brace statement_block close_brace
Rule 140   open_brace -> {
Rule 141   close_brace -> }
Rule 142   statement_block -> statement
Rule 143   statement_block -> statement_block statement
Rule 144   for_stmt -> FOR target_list IN expression_list suite
Rule 145   loop_stmt -> loop_head suite
Rule 146   loop_head -> LOOP ID AS ID
Rule 147   loop_head -> LOOP ID AS ID : ID
Rule 148   loop_head -> LOOP ID AS ID : ID comp_operator ID
Rule 149   do_stmt -> do_stmt_head suite
Rule 150   do_stmt_head -> DO ID = expression , expression
Rule 151   do_stmt_head -> DO ID = expression , expression , expression
Rule 152   with_stmt -> with_head suite
Rule 153   with_head -> WITH ID AS ID
Rule 154   where_stmt -> WHERE expression suite ELSE suite
Rule 155   switch_stmt -> SWITCH ID open_brace caselist DEFAULT suite close_brace
Rule 156   caselist -> CASE target_list suite
Rule 157   caselist -> caselist CASE target_list suite
Rule 158   funcdef -> FUNCTION ID ( arglist ) suite
Rule 159   arglist -> ID : list_display
Rule 160   arglist -> arglist , ID : list_display

Terminals, with rules where they appear

(                    : 20 75 76 115 116 121 158
)                    : 20 75 76 115 116 121 158
*                    : 42
+                    : 39 47
,                    : 17 82 83 88 89 89 107 118 123 126 150 151 151 160
-                    : 40 46
.                    : 95 122 123
/                    : 43
:                    : 101 102 103 104 113 114 147 148 159 160
;                    : 7 8 8
<                    : 30
=                    : 122 123 124 150 151
>                    : 31
AND                  : 25
AS                   : 146 147 148 153
AUGOP                : 120
BININT               : 65
BREAK                : 13
CASE                 : 156 157
COMMENT              : 
DEFAULT              : 155
DO                   : 150 151
ELLIPSIS             : 110
ELSE                 : 136 154
FOR                  : 85 86 144
FUNCTION             : 158
GTE                  : 32
HEXINT               : 63
ID                   : 56 95 122 123 146 146 147 147 147 148 148 148 148 150 151 153 153 155 158 159 160
IF                   : 92 93 135
IMAGINARY            : 67
IN                   : 36 37 85 86 144
INTEGER              : 62
ISEQUAL              : 35
ITEM_TAG             : 60
LONGSTRING           : 69 71
LOOP                 : 146 147 148
LTE                  : 33
NEQ                  : 34
NEXT                 : 14
NOT                  : 27 37
OCTINT               : 64
OR                   : 23
POWER                : 49
PRINT                : 15
REAL                 : 66 96
SHORTSTRING          : 68 70
STRPREFIX            : 68 69
SWITCH               : 155
WHERE                : 154
WITH                 : 153
[                    : 21 78 79 97 100 105
]                    : 21 78 79 97 100 105
^                    : 44
`                    : 77 77
error                : 
{                    : 140
}                    : 141

Nonterminals, with rules where they appear

a_expr               : 28 29 29 39 40
and_test             : 22 23 25
arglist              : 158 160
argument_list        : 116 118
assignment_stmt      : 9
atom                 : 50
attribute_tag        : 94
attributeref         : 55
augmented_assignment_stmt : 10
call                 : 54
caselist             : 155 157
close_brace          : 139 155
comp_operator        : 29 148
comparison           : 26
compound_stmt        : 5 138
do_stmt              : 129
do_stmt_head         : 149
dotlist              : 121 123
enclosure            : 59
expression           : 15 16 17 80 81 82 83 102 102 103 104 108 114 119 122 123 135 150 150 151 151 151 154
expression_list      : 17 75 77 85 86 97 120 124 144
extended_slicing     : 99
fancy_drel_assignment_stmt : 11
final_input          : 0
for_stmt             : 128
func_arg             : 117 118
funcdef              : 134
if_stmt              : 127 136
input                : 1 3
item_tag             : 57
list_display         : 74 159 160
list_for             : 81 90
list_if              : 91
list_iter            : 86 93
listmaker            : 78
listmaker2           : 80 83
literal              : 58
long_slice           : 112
loop_head            : 145
loop_stmt            : 130
m_expr               : 38 39 40 42 43 44
not_test             : 24 25 27
open_brace           : 139 155
or_test              : 18 23 87 88 89 92 93
parenth_form         : 72
power                : 45
primary              : 19 48 49 94 97 100 105 115 116 121
primary_att          : 51
print_stmt           : 12
proper_slice         : 109
short_slice          : 100 111 113 114
simple_slicing       : 98
simple_stmt          : 6 7 8 137
slice_item           : 106 107
slice_list           : 105 107
slicing              : 53
statement            : 2 3 142 143
statement_block      : 139 143
stmt_list            : 4 7 8
string_conversion    : 73
stringliteral        : 61
subscription         : 52
suite                : 135 136 144 145 149 152 154 154 155 156 157 158
switch_stmt          : 133
target               : 120 125 126
target_list          : 20 21 124 126 144 156 157
testlist             : 85 86 88 89
u_expr               : 41 42 43 44 46 47 49
where_stmt           : 132
with_head            : 152
with_stmt            : 131

Parsing method: LALR

state 0

    (0) S' -> . final_input
    (1) final_input -> . input
    (2) input -> . statement
    (3) input -> . input statement
    (4) statement -> . stmt_list
    (5) statement -> . compound_stmt
    (6) stmt_list -> . simple_stmt
    (7) stmt_list -> . stmt_list ; simple_stmt
    (8) stmt_list -> . stmt_list ; simple_stmt ;
    (127) compound_stmt -> . if_stmt
    (128) compound_stmt -> . for_stmt
    (129) compound_stmt -> . do_stmt
    (130) compound_stmt -> . loop_stmt
    (131) compound_stmt -> . with_stmt
    (132) compound_stmt -> . where_stmt
    (133) compound_stmt -> . switch_stmt
    (134) compound_stmt -> . funcdef
    (9) simple_stmt -> . assignment_stmt
    (10) simple_stmt -> . augmented_assignment_stmt
    (11) simple_stmt -> . fancy_drel_assignment_stmt
    (12) simple_stmt -> . print_stmt
    (13) simple_stmt -> . BREAK
    (14) simple_stmt -> . NEXT
    (135) if_stmt -> . IF expression suite
    (136) if_stmt -> . if_stmt ELSE suite
    (144) for_stmt -> . FOR target_list IN expression_list suite
    (149) do_stmt -> . do_stmt_head suite
    (145) loop_stmt -> . loop_head suite
    (152) with_stmt -> . with_head suite
    (154) where_stmt -> . WHERE expression suite ELSE suite
    (155) switch_stmt -> . SWITCH ID open_brace caselist DEFAULT suite close_brace
    (158) funcdef -> . FUNCTION ID ( arglist ) suite
    (124) assignment_stmt -> . target_list = expression_list
    (120) augmented_assignment_stmt -> . target AUGOP expression_list
    (121) fancy_drel_assignment_stmt -> . primary ( dotlist )
    (15) print_stmt -> . PRINT expression
    (150) do_stmt_head -> . DO ID = expression , expression
    (151) do_stmt_head -> . DO ID = expression , expression , expression
    (146) loop_head -> . LOOP ID AS ID
    (147) loop_head -> . LOOP ID AS ID : ID
    (148) loop_head -> . LOOP ID AS ID : ID comp_operator ID
    (153) with_head -> . WITH ID AS ID
    (125) target_list -> . target
    (126) target_list -> . target_list , target
    (19) target -> . primary
    (20) target -> . ( target_list )
    (21) target -> . [ target_list ]
    (50) primary -> . atom
    (51) primary -> . primary_att
    (52) primary -> . subscription
    (53) primary -> . slicing
    (54) primary -> . call
    (56) atom -> . ID
    (57) atom -> . item_tag
    (58) atom -> . literal
    (59) atom -> . enclosure
    (55) primary_att -> . attributeref
    (97) subscription -> . primary [ expression_list ]
    (98) slicing -> . simple_slicing
    (99) slicing -> . extended_slicing
    (115) call -> . primary ( )
    (116) call -> . primary ( argument_list )
    (60) item_tag -> . ITEM_TAG
    (61) literal -> . stringliteral
    (62) literal -> . INTEGER
    (63) literal -> . HEXINT
    (64) literal -> . OCTINT
    (65) literal -> . BININT
    (66) literal -> . REAL
    (67) literal -> . IMAGINARY
    (72) enclosure -> . parenth_form
    (73) enclosure -> . string_conversion
    (74) enclosure -> . list_display
    (94) attributeref -> . primary attribute_tag
    (100) simple_slicing -> . primary [ short_slice ]
    (105) extended_slicing -> . primary [ slice_list ]
    (68) stringliteral -> . STRPREFIX SHORTSTRING
    (69) stringliteral -> . STRPREFIX LONGSTRING
    (70) stringliteral -> . SHORTSTRING
    (71) stringliteral -> . LONGSTRING
    (75) parenth_form -> . ( expression_list )
    (76) parenth_form -> . ( )
    (77) string_conversion -> . ` expression_list `
    (78) list_display -> . [ listmaker ]
    (79) list_display -> . [ ]

    BREAK           shift and go to state 56
    NEXT            shift and go to state 7
    IF              shift and go to state 61
    FOR             shift and go to state 30
    WHERE           shift and go to state 19
    SWITCH          shift and go to state 46
    FUNCTION        shift and go to state 36
    PRINT           shift and go to state 28
    DO              shift and go to state 58
    LOOP            shift and go to state 25
    WITH            shift and go to state 5
    (               shift and go to state 6
    [               shift and go to state 38
    ID              shift and go to state 60
    ITEM_TAG        shift and go to state 64
    INTEGER         shift and go to state 55
    HEXINT          shift and go to state 57
    OCTINT          shift and go to state 33
    BININT          shift and go to state 44
    REAL            shift and go to state 40
    IMAGINARY       shift and go to state 59
    STRPREFIX       shift and go to state 10
    SHORTSTRING     shift and go to state 31
    LONGSTRING      shift and go to state 16
    `               shift and go to state 20

    final_input                    shift and go to state 1
    fancy_drel_assignment_stmt     shift and go to state 26
    primary_att                    shift and go to state 41
    primary                        shift and go to state 42
    augmented_assignment_stmt      shift and go to state 27
    stringliteral                  shift and go to state 23
    item_tag                       shift and go to state 52
    switch_stmt                    shift and go to state 43
    do_stmt_head                   shift and go to state 4
    enclosure                      shift and go to state 29
    subscription                   shift and go to state 53
    parenth_form                   shift and go to state 8
    print_stmt                     shift and go to state 50
    literal                        shift and go to state 45
    assignment_stmt                shift and go to state 32
    call                           shift and go to state 47
    statement                      shift and go to state 48
    string_conversion              shift and go to state 49
    with_head                      shift and go to state 51
    loop_head                      shift and go to state 12
    do_stmt                        shift and go to state 13
    compound_stmt                  shift and go to state 35
    attributeref                   shift and go to state 9
    simple_slicing                 shift and go to state 37
    simple_stmt                    shift and go to state 14
    loop_stmt                      shift and go to state 15
    slicing                        shift and go to state 17
    target_list                    shift and go to state 63
    for_stmt                       shift and go to state 18
    input                          shift and go to state 11
    funcdef                        shift and go to state 3
    target                         shift and go to state 54
    stmt_list                      shift and go to state 62
    if_stmt                        shift and go to state 21
    extended_slicing               shift and go to state 34
    list_display                   shift and go to state 22
    where_stmt                     shift and go to state 39
    with_stmt                      shift and go to state 24
    atom                           shift and go to state 2

state 1

    (0) S' -> final_input .



state 2

    (50) primary -> atom .

    (               reduce using rule 50 (primary -> atom .)
    [               reduce using rule 50 (primary -> atom .)
    .               reduce using rule 50 (primary -> atom .)
    REAL            reduce using rule 50 (primary -> atom .)
    AUGOP           reduce using rule 50 (primary -> atom .)
    =               reduce using rule 50 (primary -> atom .)
    ,               reduce using rule 50 (primary -> atom .)
    POWER           reduce using rule 50 (primary -> atom .)
    *               reduce using rule 50 (primary -> atom .)
    /               reduce using rule 50 (primary -> atom .)
    ^               reduce using rule 50 (primary -> atom .)
    +               reduce using rule 50 (primary -> atom .)
    -               reduce using rule 50 (primary -> atom .)
    <               reduce using rule 50 (primary -> atom .)
    >               reduce using rule 50 (primary -> atom .)
    GTE             reduce using rule 50 (primary -> atom .)
    LTE             reduce using rule 50 (primary -> atom .)
    NEQ             reduce using rule 50 (primary -> atom .)
    ISEQUAL         reduce using rule 50 (primary -> atom .)
    IN              reduce using rule 50 (primary -> atom .)
    NOT             reduce using rule 50 (primary -> atom .)
    AND             reduce using rule 50 (primary -> atom .)
    OR              reduce using rule 50 (primary -> atom .)
    ;               reduce using rule 50 (primary -> atom .)
    BREAK           reduce using rule 50 (primary -> atom .)
    NEXT            reduce using rule 50 (primary -> atom .)
    IF              reduce using rule 50 (primary -> atom .)
    FOR             reduce using rule 50 (primary -> atom .)
    WHERE           reduce using rule 50 (primary -> atom .)
    SWITCH          reduce using rule 50 (primary -> atom .)
    FUNCTION        reduce using rule 50 (primary -> atom .)
    PRINT           reduce using rule 50 (primary -> atom .)
    DO              reduce using rule 50 (primary -> atom .)
    LOOP            reduce using rule 50 (primary -> atom .)
    WITH            reduce using rule 50 (primary -> atom .)
    ID              reduce using rule 50 (primary -> atom .)
    ITEM_TAG        reduce using rule 50 (primary -> atom .)
    INTEGER         reduce using rule 50 (primary -> atom .)
    HEXINT          reduce using rule 50 (primary -> atom .)
    OCTINT          reduce using rule 50 (primary -> atom .)
    BININT          reduce using rule 50 (primary -> atom .)
    IMAGINARY       reduce using rule 50 (primary -> atom .)
    STRPREFIX       reduce using rule 50 (primary -> atom .)
    SHORTSTRING     reduce using rule 50 (primary -> atom .)
    LONGSTRING      reduce using rule 50 (primary -> atom .)
    `               reduce using rule 50 (primary -> atom .)
    $end            reduce using rule 50 (primary -> atom .)
    }               reduce using rule 50 (primary -> atom .)
    ELSE            reduce using rule 50 (primary -> atom .)
    DEFAULT         reduce using rule 50 (primary -> atom .)
    CASE            reduce using rule 50 (primary -> atom .)
    )               reduce using rule 50 (primary -> atom .)
    :               reduce using rule 50 (primary -> atom .)
    ]               reduce using rule 50 (primary -> atom .)
    {               reduce using rule 50 (primary -> atom .)


state 3

    (134) compound_stmt -> funcdef .

    BREAK           reduce using rule 134 (compound_stmt -> funcdef .)
    NEXT            reduce using rule 134 (compound_stmt -> funcdef .)
    IF              reduce using rule 134 (compound_stmt -> funcdef .)
    FOR             reduce using rule 134 (compound_stmt -> funcdef .)
    WHERE           reduce using rule 134 (compound_stmt -> funcdef .)
    SWITCH          reduce using rule 134 (compound_stmt -> funcdef .)
    FUNCTION        reduce using rule 134 (compound_stmt -> funcdef .)
    PRINT           reduce using rule 134 (compound_stmt -> funcdef .)
    DO              reduce using rule 134 (compound_stmt -> funcdef .)
    LOOP            reduce using rule 134 (compound_stmt -> funcdef .)
    WITH            reduce using rule 134 (compound_stmt -> funcdef .)
    (               reduce using rule 134 (compound_stmt -> funcdef .)
    [               reduce using rule 134 (compound_stmt -> funcdef .)
    ID              reduce using rule 134 (compound_stmt -> funcdef .)
    ITEM_TAG        reduce using rule 134 (compound_stmt -> funcdef .)
    INTEGER         reduce using rule 134 (compound_stmt -> funcdef .)
    HEXINT          reduce using rule 134 (compound_stmt -> funcdef .)
    OCTINT          reduce using rule 134 (compound_stmt -> funcdef .)
    BININT          reduce using rule 134 (compound_stmt -> funcdef .)
    REAL            reduce using rule 134 (compound_stmt -> funcdef .)
    IMAGINARY       reduce using rule 134 (compound_stmt -> funcdef .)
    STRPREFIX       reduce using rule 134 (compound_stmt -> funcdef .)
    SHORTSTRING     reduce using rule 134 (compound_stmt -> funcdef .)
    LONGSTRING      reduce using rule 134 (compound_stmt -> funcdef .)
    `               reduce using rule 134 (compound_stmt -> funcdef .)
    $end            reduce using rule 134 (compound_stmt -> funcdef .)
    }               reduce using rule 134 (compound_stmt -> funcdef .)
    ELSE            reduce using rule 134 (compound_stmt -> funcdef .)
    DEFAULT         reduce using rule 134 (compound_stmt -> funcdef .)
    CASE            reduce using rule 134 (compound_stmt -> funcdef .)


state 4

    (149) do_stmt -> do_stmt_head . suite
    (137) suite -> . simple_stmt
    (138) suite -> . compound_stmt
    (139) suite -> . open_brace statement_block close_brace
    (9) simple_stmt -> . assignment_stmt
    (10) simple_stmt -> . augmented_assignment_stmt
    (11) simple_stmt -> . fancy_drel_assignment_stmt
    (12) simple_stmt -> . print_stmt
    (13) simple_stmt -> . BREAK
    (14) simple_stmt -> . NEXT
    (127) compound_stmt -> . if_stmt
    (128) compound_stmt -> . for_stmt
    (129) compound_stmt -> . do_stmt
    (130) compound_stmt -> . loop_stmt
    (131) compound_stmt -> . with_stmt
    (132) compound_stmt -> . where_stmt
    (133) compound_stmt -> . switch_stmt
    (134) compound_stmt -> . funcdef
    (140) open_brace -> . {
    (124) assignment_stmt -> . target_list = expression_list
    (120) augmented_assignment_stmt -> . target AUGOP expression_list
    (121) fancy_drel_assignment_stmt -> . primary ( dotlist )
    (15) print_stmt -> . PRINT expression
    (135) if_stmt -> . IF expression suite
    (136) if_stmt -> . if_stmt ELSE suite
    (144) for_stmt -> . FOR target_list IN expression_list suite
    (149) do_stmt -> . do_stmt_head suite
    (145) loop_stmt -> . loop_head suite
    (152) with_stmt -> . with_head suite
    (154) where_stmt -> . WHERE expression suite ELSE suite
    (155) switch_stmt -> . SWITCH ID open_brace caselist DEFAULT suite close_brace
    (158) funcdef -> . FUNCTION ID ( arglist ) suite
    (125) target_list -> . target
    (126) target_list -> . target_list , target
    (19) target -> . primary
    (20) target -> . ( target_list )
    (21) target -> . [ target_list ]
    (50) primary -> . atom
    (51) primary -> . primary_att
    (52) primary -> . subscription
    (53) primary -> . slicing
    (54) primary -> . call
    (150) do_stmt_head -> . DO ID = expression , expression
    (151) do_stmt_head -> . DO ID = expression , expression , expression
    (146) loop_head -> . LOOP ID AS ID
    (147) loop_head -> . LOOP ID AS ID : ID
    (148) loop_head -> . LOOP ID AS ID : ID comp_operator ID
    (153) with_head -> . WITH ID AS ID
    (56) atom -> . ID
    (57) atom -> . item_tag
    (58) atom -> . literal
    (59) atom -> . enclosure
    (55) primary_att -> . attributeref
    (97) subscription -> . primary [ expression_list ]
    (98) slicing -> . simple_slicing
    (99) slicing -> . extended_slicing
    (115) call -> . primary ( )
    (116) call -> . primary ( argument_list )
    (60) item_tag -> . ITEM_TAG
    (61) literal -> . stringliteral
    (62) literal -> . INTEGER
    (63) literal -> . HEXINT
    (64) literal -> . OCTINT
    (65) literal -> . BININT
    (66) literal -> . REAL
    (67) literal -> . IMAGINARY
    (72) enclosure -> . parenth_form
    (73) enclosure -> . string_conversion
    (74) enclosure -> . list_display
    (94) attributeref -> . primary attribute_tag
    (100) simple_slicing -> . primary [ short_slice ]
    (105) extended_slicing -> . primary [ slice_list ]
    (68) stringliteral -> . STRPREFIX SHORTSTRING
    (69) stringliteral -> . STRPREFIX LONGSTRING
    (70) stringliteral -> . SHORTSTRING
    (71) stringliteral -> . LONGSTRING
    (75) parenth_form -> . ( expression_list )
    (76) parenth_form -> . ( )
    (77) string_conversion -> . ` expression_list `
    (78) list_display -> . [ listmaker ]
    (79) list_display -> . [ ]

    BREAK           shift and go to state 56
    NEXT            shift and go to state 7
    {               shift and go to state 69
    PRINT           shift and go to state 28
    IF              shift and go to state 61
    FOR             shift and go to state 30
    WHERE           shift and go to state 19
    SWITCH          shift and go to state 46
    FUNCTION        shift and go to state 36
    (               shift and go to state 6
    [               shift and go to state 38
    DO              shift and go to state 58
    LOOP            shift and go to state 25
    WITH            shift and go to state 5
    ID              shift and go to state 60
    ITEM_TAG        shift and go to state 64
    INTEGER         shift and go to state 55
    HEXINT          shift and go to state 57
    OCTINT          shift and go to state 33
    BININT          shift and go to state 44
    REAL            shift and go to state 40
    IMAGINARY       shift and go to state 59
    STRPREFIX       shift and go to state 10
    SHORTSTRING     shift and go to state 31
    LONGSTRING      shift and go to state 16
    `               shift and go to state 20

    fancy_drel_assignment_stmt     shift and go to state 26
    primary_att                    shift and go to state 41
    atom                           shift and go to state 2
    primary                        shift and go to state 42
    stringliteral                  shift and go to state 23
    item_tag                       shift and go to state 52
    switch_stmt                    shift and go to state 43
    do_stmt_head                   shift and go to state 4
    enclosure                      shift and go to state 29
    parenth_form                   shift and go to state 8
    simple_stmt                    shift and go to state 66
    literal                        shift and go to state 45
    assignment_stmt                shift and go to state 32
    call                           shift and go to state 47
    string_conversion              shift and go to state 49
    with_head                      shift and go to state 51
    suite                          shift and go to state 65
    loop_head                      shift and go to state 12
    do_stmt                        shift and go to state 13
    compound_stmt                  shift and go to state 67
    attributeref                   shift and go to state 9
    simple_slicing                 shift and go to state 37
    print_stmt                     shift and go to state 50
    loop_stmt                      shift and go to state 15
    slicing                        shift and go to state 17
    target_list                    shift and go to state 63
    for_stmt                       shift and go to state 18
    augmented_assignment_stmt      shift and go to state 27
    funcdef                        shift and go to state 3
    target                         shift and go to state 54
    if_stmt                        shift and go to state 21
    extended_slicing               shift and go to state 34
    list_display                   shift and go to state 22
    where_stmt                     shift and go to state 39
    open_brace                     shift and go to state 68
    with_stmt                      shift and go to state 24
    subscription                   shift and go to state 53

state 5

    (153) with_head -> WITH . ID AS ID

    ID              shift and go to state 70


state 6

    (20) target -> ( . target_list )
    (75) parenth_form -> ( . expression_list )
    (76) parenth_form -> ( . )
    (125) target_list -> . target
    (126) target_list -> . target_list , target
    (16) expression_list -> . expression
    (17) expression_list -> . expression_list , expression
    (19) target -> . primary
    (20) target -> . ( target_list )
    (21) target -> . [ target_list ]
    (18) expression -> . or_test
    (50) primary -> . atom
    (51) primary -> . primary_att
    (52) primary -> . subscription
    (53) primary -> . slicing
    (54) primary -> . call
    (22) or_test -> . and_test
    (23) or_test -> . or_test OR and_test
    (56) atom -> . ID
    (57) atom -> . item_tag
    (58) atom -> . literal
    (59) atom -> . enclosure
    (55) primary_att -> . attributeref
    (97) subscription -> . primary [ expression_list ]
    (98) slicing -> . simple_slicing
    (99) slicing -> . extended_slicing
    (115) call -> . primary ( )
    (116) call -> . primary ( argument_list )
    (24) and_test -> . not_test
    (25) and_test -> . and_test AND not_test
    (60) item_tag -> . ITEM_TAG
    (61) literal -> . stringliteral
    (62) literal -> . INTEGER
    (63) literal -> . HEXINT
    (64) literal -> . OCTINT
    (65) literal -> . BININT
    (66) literal -> . REAL
    (67) literal -> . IMAGINARY
    (72) enclosure -> . parenth_form
    (73) enclosure -> . string_conversion
    (74) enclosure -> . list_display
    (94) attributeref -> . primary attribute_tag
    (100) simple_slicing -> . primary [ short_slice ]
    (105) extended_slicing -> . primary [ slice_list ]
    (26) not_test -> . comparison
    (27) not_test -> . NOT not_test
    (68) stringliteral -> . STRPREFIX SHORTSTRING
    (69) stringliteral -> . STRPREFIX LONGSTRING
    (70) stringliteral -> . SHORTSTRING
    (71) stringliteral -> . LONGSTRING
    (75) parenth_form -> . ( expression_list )
    (76) parenth_form -> . ( )
    (77) string_conversion -> . ` expression_list `
    (78) list_display -> . [ listmaker ]
    (79) list_display -> . [ ]
    (28) comparison -> . a_expr
    (29) comparison -> . a_expr comp_operator a_expr
    (38) a_expr -> . m_expr
    (39) a_expr -> . a_expr + m_expr
    (40) a_expr -> . a_expr - m_expr
    (41) m_expr -> . u_expr
    (42) m_expr -> . m_expr * u_expr
    (43) m_expr -> . m_expr / u_expr
    (44) m_expr -> . m_expr ^ u_expr
    (45) u_expr -> . power
    (46) u_expr -> . - u_expr
    (47) u_expr -> . + u_expr
    (48) power -> . primary
    (49) power -> . primary POWER u_expr

    )               shift and go to state 76
    (               shift and go to state 6
    [               shift and go to state 38
    ID              shift and go to state 60
    ITEM_TAG        shift and go to state 64
    INTEGER         shift and go to state 55
    HEXINT          shift and go to state 57
    OCTINT          shift and go to state 33
    BININT          shift and go to state 44
    REAL            shift and go to state 40
    IMAGINARY       shift and go to state 59
    NOT             shift and go to state 72
    STRPREFIX       shift and go to state 10
    SHORTSTRING     shift and go to state 31
    LONGSTRING      shift and go to state 16
    `               shift and go to state 20
    -               shift and go to state 79
    +               shift and go to state 77

    primary_att                    shift and go to state 41
    primary                        shift and go to state 73
    stringliteral                  shift and go to state 23
    not_test                       shift and go to state 74
    enclosure                      shift and go to state 29
    power                          shift and go to state 75
    u_expr                         shift and go to state 71
    parenth_form                   shift and go to state 8
    literal                        shift and go to state 45
    attributeref                   shift and go to state 9
    call                           shift and go to state 47
    string_conversion              shift and go to state 49
    extended_slicing               shift and go to state 34
    simple_slicing                 shift and go to state 37
    a_expr                         shift and go to state 78
    and_test                       shift and go to state 80
    slicing                        shift and go to state 17
    target_list                    shift and go to state 81
    m_expr                         shift and go to state 82
    atom                           shift and go to state 2
    item_tag                       shift and go to state 52
    subscription                   shift and go to state 53
    comparison                     shift and go to state 83
    target                         shift and go to state 84
    expression_list                shift and go to state 85
    list_display                   shift and go to state 22
    or_test                        shift and go to state 86
    expression                     shift and go to state 87

state 7

    (14) simple_stmt -> NEXT .
